# autonomous-scooter

./: CMakeLists.txt  LICENSE  README.md  guide.md  package.xml
arduino/rosserial/: rosserial.ino
description/meshes/: gear1.stl  gear2.stl
description/urdf/: properties.xacro  scooter.urdf.xacro  scooter.xacro  test.urdf.xacro  test1.urdf  test2.xacro  test3.urdf
launch/: arduino.launch  control_robot_rviz.launch  control_rviz.launch  d435_model.launch  display.launch  empty_world.launch  gazebo.launch  gazebo1.launch  manual_control.launch  model.launch  model_gazebo.launch  model_rviz.launch  model_rviz_gazebo.launch  realsense.launch  realsense_gazebo.launch  spawn.launch  spawn_model_test.launch  spawn_sdf.launch  test.launch  test_gmapping.launch
launch/control/: control_robot_rviz.launch  control_rviz.launch  manual_control.launch  teleop_key.launch
launch/mapping/: amcl.launch  gmapping.launch  mapping.launch
launch/realsense/: camera.launch  scan.launch
meshes/: frame.stl  wheel.stl
rosserial_arduino/cmake/: rosserial_arduinoConfig.cmake
rviz/: scan.rviz  urdf.rviz
sdf/: model.config  model.sdf
src/: publish.py  publish_twist.py  publist_std.py  steering.py  subscribe.py  teleop.py  test.py
src/motor_control_arduino/: motor_control_arduino.ino
teleop/src/: teleop.py
urdf/: properties.xacro  scooter.gazebo  scooter.urdf.xacro  scooter_gazebo.urdf.xacro  test.urdf.xacro  test.xacro  test_ask.xacro  test_gazebo.urdf.xacro
urdf/realsense_urdf/: _d435.urdf.xacro  _materials.urdf.xacro  _usb_plug.urdf.xacro  d435_gazebo.urdf.xacro  (+2 more)
(+3 files in other folders)
