<?xml version="1.0"?>
<package format="2">
  <name>autonomous-scooter</name>
  <version>0.0.0</version>
  <description>The autonomous-scooter package</description>
  <maintainer email="bxtbold@protonmail.com">bat</maintainer>ag -->
  <license>MIT</license>
  <url type="website">https://github.com/bxtbold/autonomous-scooter</url>
  <author email="bxtbold@protonmail.com">Batbold Nemekhbold</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
